[package]
name = "kfs-testing-server"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
license = "Apache-2.0 OR MIT"

[dependencies]
kfs-libuser = { path = "../libuser" }
kfs-libkern = { path = "../libkern" }
kfs-libutils = { path = "../libutils" }
spin = "0.5"
hashmap_core = "0.1.9"
log = "0.4.6"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.2.0"